--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,8 @@
     <string name="app_name">Stellenangebote jugendnetz-berlin.de</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
-
+	<color name = "white">#ffffff</color>
+	<color name = "red">#ff0000</color>
+	<color name = "reddish">#aa5555</color>
+    
 </resources>
