--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,11 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Stellenangebote jugendnetz-berlin.de</string>
+    <string name="app_name">jugendnetz-berlin.de</string>
     <string name="action_settings">Settings</string>
+    <string name="action_refresh">Refresh</string>
+    <string name="title_stellen">Stellenangebote</string>
+    <string name="title_news">Neues</string>
+    <string name="title_dates">Termine</string>
+    <string name="title_section1">Stellen</string>
+    <string name="title_section2">Neues</string>
+    <string name="title_section3">Termine</string>
     <string name="hello_world">Hello world!</string>
 	<color name = "white">#ffffff</color>
 	<color name = "red">#ff0000</color>
 	<color name = "reddish">#aa5555</color>
-    
+    <color name = "theblue">#009adb</color>
+	
+	
 </resources>
